--- a/importExcelTest/ManagerForm.resx
+++ b/importExcelTest/ManagerForm.resx
@@ -129,6 +129,24 @@
   <metadata name="maliDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>700, 95</value>
   </metadata>
+  <metadata name="endDateTimePickerX1.SelectedDateInDateTime" type="System.DateTime, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>2018-02-03</value>
+  </metadata>
+  <metadata name="endDateTimePickerX1.SelectedDateInStringPersian" xml:space="preserve">
+    <value>1396/11/14</value>
+  </metadata>
+  <metadata name="endDateTimePickerX1.SelectedDateInStringEnglish" xml:space="preserve">
+    <value>2018/02/03</value>
+  </metadata>
+  <metadata name="startDateTimePickerX.SelectedDateInDateTime" type="System.DateTime, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>2018-02-03</value>
+  </metadata>
+  <metadata name="startDateTimePickerX.SelectedDateInStringPersian" xml:space="preserve">
+    <value>1396/11/14</value>
+  </metadata>
+  <metadata name="startDateTimePickerX.SelectedDateInStringEnglish" xml:space="preserve">
+    <value>2018/02/03</value>
+  </metadata>
   <metadata name="cityTableBindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>515, 95</value>
   </metadata>
