-Manager now can edit even in restricted Time -Change text in manager Form

--- a/importExcelTest/Report.resx
+++ b/importExcelTest/Report.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CgAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACS
+        CgAAAk1TRnQBSQFMAgEBBQEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,22 +153,24 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACAAD/wEb
-        AxoBGwP/BwAHRwgAAf8BzwWtAQkXAAH/AfEBvAHvAysBBwG8AfIB/wUAC0cFAAG1Ca0B9RcABisBUgYA
-        DUcDAAG0C60B9QcABP8KAAkrBQANRwIAARkFrQIAAfEFrQQAAf8B8QHrAQ4CAAEOAesB8AH/BgAFKwH/
-        BSsDAARHAfIBFgNHAvIERwEABq0CAAHxBa0BCQIAAfQB6gFDAQcB9AL/AfQBBwEVARIB9AUACysDAARH
-        AvIBFgFHA/IERwH0Bq0CAAHxBq0BAAHzARAB9wL/AZIBFAEVAZIC/wH3AQ8B8wQABTIB/wUyAwAFRwXy
-        BUcBCQatAgAB8QatAf8BEAEHAQAB/wEVBAABQwH/AQABBwEQAfQDAAUyAf8FMgIAB0cD8gZHAbQGrQIA
-        AfEGrQLsAgAB9wYAAZICAAHtAewDAAVTAf8FUwIAAf8FRwTyARYFRwG1Bq0CAAHxBq0B7wHqAf8BAAET
-        AeoBDwQAARQBAAH/AeoB7wMABVMB/wVTAwAERwPyAUcC8gEWBEcB3Q+tAf8B6gHsAf8BEwEHAfgEAAEU
-        Af8B7AESAf8EAAFZA3oBUgR6BAADRwGUAvIDRwLyBEcB/watAfQBAAG0Bq0BAAH/AuoB6wEUAfQB7AEP
-        AgAB6wHqARIB/wYAAZoGegUAAfUDRwGUCUcCAAHPBa0CAAH0Ba0B9QIAAf8B7wEOAQABFAEHAeoCAAEO
-        Ae8B/wkAAXUBmgFTCAANRwIAAf8FrQG1AfQFrQG0BQAB/wEHAesCEwHrAQcB/xcAC0cEAAH/Cq0BtCYA
-        AfUHRwcAAf8BzwetAd0qAAH/AUcMAAH/Ad0BtAHPAbUB8xUAAUIBTQE+BwABPgMAASgDAAFAAwABIAMA
-        AQEBAAEBBgABARYAA/+BAAHgAQMB+AEPAfABDwL/AeABAwHgAQMB4AEDAv8B+AEPAcABAQHAAQEB/AE/
-        AfABBwHAAQECgQHgAQcB4AEDAYABAAGBAYABwAEDAeABAwGAAQABAQKAAQEB4AEDAYABAAEBAYABEAEI
-        AeABAwIAAQEBgAEwAQwB4AEDAgABAQGAARABCAHgAQMBgAUAAfABBwGAAgACgAEBAfgBDwGAAQEBgQGA
-        AcABAwH+AT8BwAEBAYABAQHwAQ8C/wHgAQMBwAEDBP8B8AEPAeABBwT/Af4BfwH4AR8C/ws=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAEP8wABD/MAAQ/zAA
+        EP8wABD/MAAQ/zAAB/8C8wf/MAAG/wH1Ar0B9Qb/MAAH/wK9AfYG/zAAB/8C9Qf/MAAQ/zAAEP8wABD/
+        MAAQ/zAAEP8wABD/MwAD/wEbAxoBGwP/BwAHRwgAAf8BzwWtAQkXAAH/AfEBvAHvAysBBwG8AfIB/wUA
+        C0cFAAG1Ca0B/xcABisBUgYADUcDAAG0C60B/wcABP8KAAkrBQANRwIAARkFrQIAAfEFrQQAAf8B8QHr
+        AQ4CAAEOAesB8AH/BgAFKwH/BSsDAARHAfIBFgNHAvIERwEABq0CAAHxBa0BCQIAAfQB6gFDAQcB9AL/
+        AfQBBwEVARIB9AUACysDAARHAvIBFgFHA/IERwH0Bq0CAAHxBq0BAAHzARAB9wL/AZIBFAEVAZIC/wH3
+        AQ8B8wQABTIB/wUyAwAFRwXyBUcBCQatAgAB8QatAf8BEAEHAQAB/wEVBAABQwH/AQABBwEQAfQDAAUy
+        Af8FMgIAB0cD8gZHAbQGrQIAAfEGrQLsAgAB9wYAAZICAAHtAewDAAVTAf8FUwIAAf8FRwTyARYFRwG1
+        Bq0CAAHxBq0B7wHqAf8BAAETAeoBDwQAARQBAAH/AeoB7wMABVMB/wVTAwAERwPyAUcC8gEWBEcB3Q+t
+        Af8B6gHsAf8BEwEHAewEAAEUAf8B7AESAf8EAAFZA3oBUgR6BAADRwGUAvIDRwLyBEcB/watAfQBAAG0
+        Bq0BAAH/AuoB6wEUAfQB7AEPAgAB6wHqARIB/wYAAZoGegUAAf8DRwGUCUcCAAHPBa0CAAH0Ba0B/wIA
+        Af8B7wEOAQABFAEHAeoCAAEOAe8B/wkAAXUBmgFTCAANRwIAAf8FrQG1AfQFrQG0BQAB/wEHAesCEwHr
+        AQcB/xcAC0cEAAH/Cq0BtCYAAf8HRwcAAf8BzwetAd0qAAH/AUcMAAH/Ad0BtAHPAbUB8xUAAUIBTQE+
+        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHgAQMB+AEPAfABDwL/AeABAwHgAQMB4AED
+        Av8B+AEPAcABAQHAAQEB/AE/AfABBwHAAQECgQHgAQcB4AEDAYABAAGBAYABwAEDAeABAwGAAQABAQKA
+        AQEB4AEDAYABAAEBAYABEAEIAeABAwIAAQEBgAEwAQwB4AEDAgABAQGAARABCAHgAQMBgAUAAfABBwGA
+        AgACgAEBAfgBDwGAAQEBgQGAAcABAwH+AT8BwAEBAYABAQHwAQ8C/wHgAQMBwAEDBP8B8AEPAeABBwT/
+        Af4BfwH4AR8C/ws=
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
