--- a/importExcelTest/Properties/Resources.resx
+++ b/importExcelTest/Properties/Resources.resx
@@ -121,11 +121,11 @@
   <data name="clock000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clock000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="d6046650703785.58d789fda431f" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\d6046650703785.58d789fda431f.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="669348-l" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\669348-l.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="graph000" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\graph000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="excel-integration" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excel-integration.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,6 +166,9 @@
   <data name="if_sign-check_299110" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_sign-check_299110.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="note1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\note1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="copy-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\copy-16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -187,11 +190,11 @@
   <data name="if_basics-22_296812" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_basics-22_296812.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="if_081_Pen_183209" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_081_Pen_183209.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="note" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\note.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="map-0000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-0000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -223,8 +226,8 @@
   <data name="if_calendar_285670 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_calendar_285670 (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="printer-" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\printer-.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="d6046650703785.58d789fda431f" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\d6046650703785.58d789fda431f.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="if_081_Pen_183209 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_081_Pen_183209 (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -256,8 +259,8 @@
   <data name="loadinganimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loadinganimation.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-shutdown-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-shutdown-48.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="printer-" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\printer-.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Edit (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Edit (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,29 +268,29 @@
   <data name="ab79a231234507.564a1d23814ef" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ab79a231234507.564a1d23814ef.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="print-flat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\print-flat.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="search (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="if_basics-15_296819" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\if_basics-15_296819.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-shutdown-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-shutdown-48.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="How-to-manage-access-to-permission" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\How-to-manage-access-to-permission.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="if_081_Pen_183209" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\if_081_Pen_183209.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="if_basics-15_296819" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_basics-15_296819.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="note" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\note.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Carlosjj_Microsoft_Office_2013_Excel__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Carlosjj-Microsoft-Office-2013-Excel (1).ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="graph000" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\graph000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="print-flat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\print-flat.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="note1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\note1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="stp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stp.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
