--- a/importExcelTest/Properties/Resources.resx
+++ b/importExcelTest/Properties/Resources.resx
@@ -121,14 +121,17 @@
   <data name="clock000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clock000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="stp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stp.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="d6046650703785.58d789fda431f" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\d6046650703785.58d789fda431f.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="669348-l" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\669348-l.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="graph000" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\graph000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="excel-integration" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\excel-integration.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Edit (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Edit (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Actions-edit-redo-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Actions-edit-redo-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -147,6 +150,9 @@
   </data>
   <data name="pencil-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pencil-1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="copy-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\copy-16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excel.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,9 +175,6 @@
   <data name="note1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\note1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="copy-16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\copy-16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\32x32.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,11 +193,11 @@
   <data name="if_basics-22_296812" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_basics-22_296812.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="if_081_Pen_183209" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\if_081_Pen_183209.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="note" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\note.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="map-0000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\map-0000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -226,8 +229,8 @@
   <data name="if_calendar_285670 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_calendar_285670 (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="d6046650703785.58d789fda431f" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\d6046650703785.58d789fda431f.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="excel-integration" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\excel-integration.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="if_081_Pen_183209 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_081_Pen_183209 (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -262,11 +265,11 @@
   <data name="printer-" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\printer-.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Edit (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Edit (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ab79a231234507.564a1d23814ef" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ab79a231234507.564a1d23814ef.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="print-flat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\print-flat.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search (1).png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -280,17 +283,17 @@
   <data name="if_basics-15_296819" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_basics-15_296819.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="note" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\note.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="if_081_Pen_183209" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_081_Pen_183209.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Carlosjj_Microsoft_Office_2013_Excel__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Carlosjj-Microsoft-Office-2013-Excel (1).ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="print-flat" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\print-flat.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="graph000" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\graph000.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="stp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\stp.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="stp1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stp1.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
